--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1dI8ClZExOQ9lDAkdAIxE",
+      "authorship_tag": "ABX9TyObMzHb8ZiJszpvkq57XP3F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1290,7 +1290,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Operadores Aritméticos\n",
+        "## **Extra 8 : Operadores Aritméticos**\n",
         "\n",
         "Links úteis:\n",
         "\n",
@@ -1305,7 +1305,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Operadores Lógicos**\n",
+        "## **Extra 9: Operadores Lógicos**\n",
         "\n",
         "Links úteis:\n",
         "\n",
@@ -1320,7 +1320,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Como se Aprimorar**\n",
+        "## **Extra 10: Como se Aprimorar**\n",
         "\n",
         "Links úteis:\n",
         "\n",
@@ -1625,6 +1625,124 @@
       ],
       "metadata": {
         "id": "16eZh78TYqAU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "SQL com Joviano Parte 2\n",
+        "\n",
+        "Chat da aula:\n",
+        "\n",
+        "00:14:11\tRodrigo Goncalves:\tkkkkkkkkkkkkk\n",
+        "\n",
+        "00:15:37\tAlessandra Antonieli:\tSim, perfeito\n",
+        "\n",
+        "00:15:38\tRafaella Ferratti de Barros:\tTá ótima\n",
+        "\n",
+        "00:15:38\tDiogo Bueno:\tsim, tudo ok\n",
+        "\n",
+        "00:15:40\tRodrigo Goncalves:\tto vendo bem\n",
+        "\n",
+        "00:15:43\tCristiane E Leite:\tJoia\n",
+        "\n",
+        "00:15:50\tVanessa:\tok\n",
+        "\n",
+        "00:15:50\tricardo.vieira:\ttudo joia\n",
+        "\n",
+        "00:16:05\tAlessandra Antonieli:\t1\n",
+        "\n",
+        "00:16:07\tVanessa:\t9\n",
+        "\n",
+        "00:16:08\tHuberson Cunha:\t9\n",
+        "\n",
+        "00:16:08\tCristiane E Leite:\t9\n",
+        "\n",
+        "00:16:08\tricardo.vieira:\t9\n",
+        "\n",
+        "00:16:09\tGetúlio Pires:\t1\n",
+        "\n",
+        "00:16:09\tDiogo Bueno:\t1\n",
+        "\n",
+        "00:16:10\tWilton Ramos:\tAtrasei.....antes tarde do que nunca....boa noite a todos\n",
+        "\n",
+        "00:16:12\tRafaella Ferratti de Barros:\t9\n",
+        "\n",
+        "00:16:15\tVitor Peralva:\t1\n",
+        "\n",
+        "00:16:21\tRodrigo Goncalves:\t9 entrei ontem no dsnp\n",
+        "\n",
+        "00:16:26\tRenato Rezende:\t1\n",
+        "\n",
+        "00:16:28\tAbraços:\tBoa noite .\n",
+        "\n",
+        "00:22:09\tAbraços:\tBoa!!\n",
+        "\n",
+        "00:24:38\tDiogo Bueno:\tO melhor é aquele que sabemos fazer corretamente\n",
+        "\n",
+        "00:29:14\tRafaella Ferratti de Barros:\to tão amado Power Query\n",
+        "\n",
+        "00:29:30\tCristiane E Leite:\ttô precisando ganhar meu leite com PQ tbm\n",
+        "\n",
+        "00:29:41\tVitor Peralva:\tTransformar Dados\n",
+        "\n",
+        "00:29:46\tRafaella Ferratti de Barros:\tETL\n",
+        "\n",
+        "00:29:47\tCristiane E Leite:\tAinda não conheço o Panda\n",
+        "\n",
+        "00:29:55\tHuberson Cunha:\ttrata os dados\n",
+        "\n",
+        "00:30:10\tCristiane E Leite:\tAhhh, desculpa ai a vergonha q passei\n",
+        "\n",
+        "00:38:59\tRafaella Ferratti de Barros:\tUma dúvida, quando eu vou fazer esse esquema do a=1 no Power Query, eu preciso sempre criar primeiro essa tabela de a=1 também dentro do banco se não ele dá erro?\n",
+        "\n",
+        "00:57:31\tRodrigo Goncalves:\tJoviano, e  se eu tivesse uma categoria especifica de pessoas  que se enquadram numa condição \"compram bike mas não podem comprar acessórios\". Como eu faria a validação desses casos ? Tipo: a certeza que as pessoas que compram bike nao estão comprando acessórios ?\n",
+        "\n",
+        "00:59:28\tCristiane E Leite:\tPoderia ser feito uma referência ao invés de duplicar?\n",
+        "\n",
+        "01:07:51\tRodrigo Goncalves:\teuu\n",
+        "\n",
+        "01:12:49\tRafaella Ferratti de Barros:\tMuito bom\n",
+        "\n",
+        "01:13:19\tRafaella Ferratti de Barros:\tGostei bastante desse exemplo\n",
+        "\n",
+        "01:13:51\tRodrigo Goncalves:\tJá deu pra clarear bastante !!\n",
+        "\n",
+        "01:19:38\tCristiane E Leite:\tOiê!\n",
+        "\n",
+        "01:21:18\tCristiane E Leite:\tEle trás o código por trás da consulta\n",
+        "\n",
+        "01:21:48\tCristiane E Leite:\tcerto\n",
+        "\n",
+        "01:22:49\tCristiane E Leite:\tPerfeito Obg Mestre!\n",
+        "\n",
+        "01:22:57\tGledson Morais de Oliveira:\te nesse caso de duplicar ele continua atualizando normalmente?\n",
+        "\n",
+        "01:25:35\tRodrigo Goncalves:\tQue aula !! Muito obrigado, Professor.\n",
+        "\n",
+        "01:27:15\tCristiane E Leite:\tBI\n",
+        "\n",
+        "01:29:34\tDiogo Bueno:\tMuito obrigado pelos ensinamentos, Joviano. Sempre diferenciado.\n",
+        "\n",
+        "01:33:42\tCristiane E Leite:\tLinguagem M\n",
+        "\n",
+        "01:36:49\tHuberson Cunha:\tsó agradecer Mestre!\n",
+        "\n",
+        "01:37:19\tricardo.vieira:\tJoviFlix da terça-feira... obrigado!!!\n",
+        "\n",
+        "01:37:34\tCristiane E Leite:\tCaraca tenho muito o que aprender, Obg Mestre\n",
+        "\n",
+        "01:37:43\tVitor Peralva:\tMais uma aula excelente.\n",
+        "\n",
+        "01:50:01\tCristiane E Leite:\t\\O/ \\O/ \\O/ \\O/ \\O/\n",
+        "\n",
+        "01:50:23\tricardo.vieira:\tMuitas possibilidades... obrigado pelas dicas e pela aula top!!!\n",
+        "\n",
+        "01:51:08\tCristiane E Leite:\tMuito Obg Mestre!\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "VJdQ86FJZ3vf"
       }
     }
   ]
