--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObMzHb8ZiJszpvkq57XP3F",
+      "authorship_tag": "ABX9TyPYS4qovAH4NuZ2Urey7wY+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1335,7 +1335,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Instalando o SQL Server Developer**\n",
+        "## **Extra 11: Instalando o SQL Server Developer**\n",
         "\n",
         "Nessa aula, nosso convidado especialista Joviano Silveira ensina como preparar o seu ambiente para que possamos continuar evoluindo em nossas habilidades com SQL.\n",
         "\n",
@@ -1350,7 +1350,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Instalando o SQL Server Management Studio**\n",
+        "## **Extra 12: Instalando o SQL Server Management Studio**\n",
         "\n",
         "Nessa aula, nosso convidado especialista Joviano Silveira ensina como preparar o seu ambiente para que possamos continuar evoluindo em nossas habilidades com SQL.\n",
         "\n",
@@ -1365,7 +1365,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Extra: SQL com Joviano Silveira**\n",
+        "## **Extra 13: SQL com Joviano Silveira**\n",
         "\n",
         "Joviano Silveira no Instagram\n",
         "\n",
