--- a/79_Prompt_Engineering.ipynb
+++ b/79_Prompt_Engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhuYHP+TJf3cXrvkybEG+G",
+      "authorship_tag": "ABX9TyNU7DNKpUzGW9ssirgA5+7H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,6 +129,102 @@
       "source": [
         "!pip install openai -q"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import openai\n",
+        "\n",
+        "openai.api_key = \"insira-aqui-sua-chave\"\n",
+        "\n",
+        "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
+        "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+        "    response = openai.ChatCompletion.create(\n",
+        "        model=model,\n",
+        "        messages=messages,\n",
+        "        temperature=0, # this is the degree of randomness of the model's output\n",
+        "    )\n",
+        "    return response.choices[0].message[\"content\"]"
+      ],
+      "metadata": {
+        "id": "hJGMEOuVvAqu"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Princípios de Prompting\n",
+        "- **Princípio 1:  Escreva instruções claras e específicas**\n",
+        "- **Princípio 2: Dê tempo para o modelo \"pensar\"”**"
+      ],
+      "metadata": {
+        "id": "TdUqPgQivNBR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Táticas\n",
+        "\n",
+        "#### Tática 1: Use delimitadores para indicar claramente partes distintas da entrada\n",
+        "- Delimitadores podem ser qualquer coisa, como: ```, \"\"\", < >, `<tag> </tag>`, `:`"
+      ],
+      "metadata": {
+        "id": "Mtg3suPtvW5-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fact_sheet_chair = \"\"\"\n",
+        "VISÃO GERAL\n",
+        "- Parte de uma bela família de móveis de escritório inspirados no design\n",
+        "das décadas de 1950, incluindo arquivos, mesas, estantes, mesas de reunião e mais.\n",
+        "- Várias opções de cor para a carcaça e acabamentos da base.\n",
+        "- Disponível com estofamento frontal e traseiro em plástico (SWC-100)\n",
+        "ou estofamento completo (SWC-110) em 10 opções de tecido e 6 opções de couro.\n",
+        "- Opções de acabamento da base: aço inoxidável, preto fosco,\n",
+        "branco brilhante ou cromado.\n",
+        "- A cadeira está disponível com ou sem apoios de braços.\n",
+        "- Adequada para configurações residenciais ou comerciais.\n",
+        "- Qualificada para uso em contratos.\n",
+        "\n",
+        "CONSTRUÇÃO\n",
+        "- Base de alumínio com 5 rodízios revestidos de plástico.\n",
+        "- Ajuste pneumático da altura da cadeira para fácil elevação/rebaixamento.\n",
+        "\n",
+        "DIMENSÕES\n",
+        "- LARGURA 53 CM | 20,87”\n",
+        "- PROFUNDIDADE 51 CM | 20,08”\n",
+        "- ALTURA 80 CM | 31,50”\n",
+        "- ALTURA DO ASSENTO 44 CM | 17,32”\n",
+        "- PROFUNDIDADE DO ASSENTO 41 CM | 16,14”\n",
+        "\n",
+        "OPÇÕES\n",
+        "- Opções de rodízios para piso macio ou duro.\n",
+        "- Duas escolhas de densidades de espuma do assento:\n",
+        " média (1,8 lb/ft3) ou alta (2,8 lb/ft3).\n",
+        "- Sem braços ou com apoios de braços PU em 8 posições.\n",
+        "\n",
+        "MATERIAIS\n",
+        "CARCAÇA BASE DESLIZANTE\n",
+        "- Alumínio fundido com revestimento modificado de nylon PA6/PA66.\n",
+        "- Espessura da carcaça: 10 mm.\n",
+        "ASSENTO\n",
+        "- Espuma HD36.\n",
+        "\n",
+        "PAÍS DE ORIGEM\n",
+        "- Itália\n",
+        "\"\"\"\n"
+      ],
+      "metadata": {
+        "id": "5JqMOynCvbqn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
